src/App.css
@font-face {
  font-family: "nothing";
  src: url("../../assets/fonts/8bit.ttf");
}

body {
  margin: 0px;
  overflow: hidden;
  font-family: nothing;
}

* {
  transition: 0.5s all ease-in-out;
  cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 30 30"><rect x="0px" y="0px" rx="4" ry="4" width="8px" height="8px" fill="gainsboro" stroke="white" stroke-width="1px"></rect></svg>'), auto !important;
  ;
}

#root {
  text-align: center;
  display: grid;
  grid-template-areas: ". . ." ". text ." ". . .";
  grid-template-rows: 1fr auto 1fr;
  grid-template-columns: 1fr auto 1fr;
  height: 100vh;
  width: 100vw;
  margin: 0;
  overflow: hidden;
  background: #1a1a1a;
  background-size: 400% 400%;
  animation: gradient 15s ease infinite;
}

::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background: gray;
}

::-webkit-scrollbar-thumb {
  background: #1a1a1a;
}

::-webkit-scrollbar-thumb:hover {
  background: black;
}


@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }

  50% {
    background-position: 100% 50%;
  }

  100% {
    background-position: 0% 50%;
  }
}

.content {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  height: 90vh;
  background: #4b4b4b;
  box-shadow: 2px -6px 20px 3px black;
  z-index: 999;
  color: white;
  position: relative;
}

.playground-segment {
  margin-top: -7vh;
}

@media screen and (max-aspect-ratio: 16/8) {
  .content {
    display: flex !important;
    justify-content: space-evenly !important;
    align-items: center !important;
    flex-direction: column !important;
    overflow: auto;
    height: 90vh;
  }

  .content>div {
    margin: 20px auto;
    width: 80%;
  }
}

